# gamebaby-20180215-dumped

./: CMakeLists.txt  battle.gb  battle.gb.txt  gb.snd.txt  gbsnd_sdl.cpp  script.gamn  script.sc  shell.html  testGBSND.cpp  testGBSTD.cpp
Battle/: Battle.cpp  Battle.hpp  BattleAction.hpp  BattleCommand.cpp  BattleCommand.hpp  BattleEnemy.cpp  BattleEnemy.hpp  BattleEnemyParty.cpp  BattleEnemyParty.hpp  BattleHero.hpp  BattleItem.hpp  BattlePlayer.cpp  BattlePlayer.hpp  BattlePlayerBase.cpp  BattlePlayerBase.hpp  BattleTeam.cpp  BattleTeam.hpp  BattleTimeData.cpp  BattleTimeData.hpp  Battle_ActionChoosing.cpp  Battle_ActionMaking.cpp  Battle_ActionProcessing.cpp  Battle_StreamText.cpp  Battle_TemporaryData.cpp  Battle_TemporaryData.hpp  CMakeLists.txt  CharacterData.cpp  CharacterData.hpp  EmbeddedData.cpp  EmbeddedData.hpp  FrontInterface.cpp  FrontInterface.hpp  Player.hpp  ReadOnlyData.cpp  ReadOnlyData.hpp  SavedData.cpp  SavedData.hpp  Screen.cpp  Screen.hpp  Startup.hpp  (+10 more)
Battle/process_list_collection/: CMakeLists.txt  attack.cpp  hp_recover.cpp  search.cpp
Battle/process_lists/: attack.cpp  hp_recover.cpp  search.cpp
Battle/processes/: attack.cpp  hp_damage.cpp  hp_recover.cpp  search.cpp  use.cpp
Game/: Actor.cpp  Actor.hpp  Board.cpp  Board.hpp  Board__render.cpp  Director.cpp  Director.hpp  EffectObject.cpp  EffectObject.hpp  Enemy.hpp  Event.cpp  Event.hpp  EventQueue.cpp  EventQueue.hpp  Event__Piece.hpp  Event__Square.hpp  Game.cpp  Game.hpp  GameData.cpp  GameData.hpp  GameItem.cpp  GameItem.hpp  GameItemSpecs.cpp  GameItemSpecs.hpp  Game__Choosing.cpp  Game__Debugger.cpp  Game__MainMenu.cpp  Game__Message.cpp  Game__SackMenu.cpp  Game__ScriptManager.cpp  Game__ShopMenu.cpp  Game__Shopping.cpp  Game__StatusMonitor.cpp  Game__StatusReportor.cpp  Game__TalkManager.cpp  Game__controll_hero_piece.cpp  Game__process_event.cpp  Game__process_script.cpp  Game__process_string.cpp  Game__throw_item.cpp  (+32 more)
Gamn/: gamn.hpp  gamn_Cursor.cpp  gamn_Cursor.hpp  gamn_List.cpp  gamn_List.hpp  gamn_StreamReader.cpp  gamn_StreamReader.hpp  gamn_StreamReader__read_number.cpp  gamn_StreamReader__skip.cpp  gamn_String.cpp  gamn_String.hpp  gamn_Value.cpp  gamn_Value.hpp  testGamn.cpp
Script/: gmbb_Script.hpp  gmbb_Script__Cursor.cpp  gmbb_Script__Cursor.hpp  gmbb_Script__List.cpp  gmbb_Script__List.hpp  gmbb_Script__StreamReader.cpp  gmbb_Script__StreamReader.hpp  gmbb_Script__StreamReader__read_number.cpp  gmbb_Script__Token.cpp  gmbb_Script__Token.hpp  gmbb_Script__TokenString.cpp  gmbb_Script__TokenString.hpp  gmbb_Script__Value.cpp  gmbb_Script__Value.hpp  testScript.cpp
Standard/: FixedString.hpp  Pointer.hpp  ReferenceWrapper.hpp  covered_ptr  gmbb_ColumnStyleMenuWindow.cpp  gmbb_ColumnStyleMenuWindow.hpp  gmbb_Controller.cpp  gmbb_Controller.hpp  gmbb_Direction.hpp  gmbb_Figures.hpp  gmbb_File.cpp  gmbb_File.hpp  gmbb_FileReader.cpp  gmbb_FileReader.hpp  gmbb_FileWriter.cpp  gmbb_FileWriter.hpp  gmbb_GlyphSet.cpp  gmbb_GlyphSet.hpp  gmbb_GroupTask.cpp  gmbb_GroupTask.hpp  gmbb_Image.cpp  gmbb_Image.hpp  gmbb_Image__png.cpp  gmbb_Image__print.cpp  gmbb_IntervalTimer.hpp  gmbb_LineMaker.cpp  gmbb_LinearCharacterBuffer.cpp  gmbb_LinearCharacterBuffer.hpp  gmbb_Menu.cpp  gmbb_Menu.hpp  gmbb_MessageWindow.cpp  gmbb_MessageWindow.hpp  gmbb_Palette.hpp  gmbb_RandomNumber.cpp  gmbb_RandomNumber.hpp  (+22 more)
libgbdn/: CMakeLists.txt  README  gbdn.hpp  list.cpp  list.hpp  stream_reader.cpp  stream_reader.hpp  stream_reader__read_number.cpp  stream_reader__skip.cpp  string.cpp  string.hpp  testGBDN.cpp  testGamn.cpp  value.cpp  value.hpp
libgbsnd/: CMakeLists.txt  README  block.cpp  build_stmt_list.cpp  data_stack.cpp  device.cpp  device.hpp  device__noise.cpp  device__square_wave.cpp  execution.hpp  execution_context.cpp  execution_frame.cpp  expr.cpp  expr.hpp  expr__binary_operation.cpp  expr__make_expr.cpp  expr__unary_operation.cpp  expr_array.cpp  expr_element.cpp  list.hpp  make_expr.cpp  object.hpp  operand.cpp  operate.cpp  operation.cpp  property.cpp  reference.cpp  routine.cpp  routine.hpp  routine_PRIVATE.hpp  script.cpp  script.hpp  script_token.cpp  script_token_cursor.cpp  script_token_string.cpp  shared_string.cpp  shared_string.hpp  stmt.cpp  stmt.hpp  value.cpp
libgbsnd/exprs/: expr.cpp  expr_queue.cpp  make_expr.cpp  operate.cpp
libgbsnd/objects/: value.cpp
libgbsnd/scripts/: script_token.cpp  script_token_string.cpp
libgbsnd/stmts/: routine.cpp  stmt_list.cpp
libgbstd/: CMakeLists.txt  ColumnStyleMenuWindow.hpp  FixedPointNumber.hpp  GroupTask.cpp  GroupTask.hpp  IntervalTimer.hpp  RandomNumber.hpp  SawtoothCharacterBuffer.cpp  SawtoothCharacterBuffer.hpp  ScrollStyleMenuWindow.hpp  Standard.hpp  Stream.cpp  Stream.hpp  StreamReader.cpp  StreamReader.hpp  StreamWriter.cpp  StreamWriter.hpp  Task.cpp  Task.hpp  Window__draw_frame.cpp  binary_stream.cpp  binary_stream.hpp  binary_stream_reader.cpp  binary_stream_writer.cpp  entry_list.hpp  environment.cpp  environment.hpp  fixed_point_number.hpp  font.cpp  font.hpp  group_task.cpp  group_task.hpp  image.hpp  image__print.cpp  line_maker.cpp  menu.hpp  random_number.cpp  random_number.hpp  ro_ptr.hpp  string.hpp  (+16 more)
libgbstd/image/: Figures.hpp  GlyphSet.cpp  GlyphSet.hpp  Image.cpp  Image.hpp  Image__draw.cpp  Image__frame.cpp  Image__png.cpp  Image__print.cpp  Image__transfer.cpp  LineMaker.hpp  Palette.hpp
libty/: CMakeLists.txt  README  array_def.cpp  array_def.hpp  array_definition.cpp  array_definition.hpp  declaration.hpp  enum_def.cpp  enum_def.hpp  enum_definition.cpp  enum_definition.hpp  member_decl.hpp  print.hpp  signature.hpp  struct_def.cpp  struct_def.hpp  struct_definition.cpp  struct_definition.hpp  testTS.cpp  testTY.cpp  ty.hpp  type_decl.cpp  type_decl.hpp  type_decl_PRIVATE.hpp  type_info.cpp  type_info.hpp  type_info_PRIVATE.hpp  type_info__add.cpp  type_info__constructor.cpp  type_info__is.cpp  type_info__make.cpp  type_info__print.cpp  type_info__remove.cpp  type_table.hpp  udef_type_info.cpp  udef_type_info.hpp  union_def.cpp  union_def.hpp  union_definition.cpp  union_definition.hpp  (+4 more)
(+38 files in other folders)
